--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,7 @@ p {
     color: #4d5ae5;
     padding: 16px 0 16px 0;
     display: inline-block;
+    margin-right: 76px;
 }
 
 .studio {
@@ -133,15 +134,14 @@ p {
         letter-spacing: 0.02em;
         color: #ffffff;
         max-width: 496px;
-        max-height: 120px;
         margin: 0 auto 72px;
         font-weight: 700;
-        padding-bottom: 36px;
+        margin-bottom: 48px;
     }
 }
 @media screen and (min-width: 768px) {
     .zagolovok-one {
-        padding-bottom: 48px;
+        margin-bottom: 48px;
     }
 }
 
@@ -172,13 +172,11 @@ p {
 
 .section-one {
     margin: 0 auto;
-    padding: 188px 0;
     background-color: #2e2f42;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),
             rgba(46, 47, 66, 0.7)),
         url(../images/hero-image-mobile-x2.jpg);
     max-width: 320px;
-    max-height: 432px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -191,7 +189,6 @@ p {
                 rgba(46, 47, 66, 0.7)),
             url(../images/hero-image-tablet-x2.jpg);
         max-width: 768px;
-        max-height: 436px;
         padding: 112px 0;
         
     }
@@ -203,13 +200,21 @@ p {
                 rgba(46, 47, 66, 0.7)),
             url(../images/hero-image-pc-x2.jpg);
         max-width: 1440px;
-        max-height: 600px;
-        padding: 188px 0;
     }
 }
 
 .section {
-    padding: 96px 0;
+    padding: 72px 0;
+}
+@media screen and (min-width: 768px){
+    .section{
+        padding: 112px 0;
+    }
+}
+@media screen and (min-width: 1158px){
+    .section {
+            padding: 188px 0;
+        }
 }
 
 /* SVG */
@@ -282,23 +287,12 @@ p {
     color: #2e2f42;
     text-align: center;
 }
-@media screen and (min-width: 1158px){
-    .paragraph{
-        font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #434455;
-font-family: "Roboto", sans-serif;
-    }
-    .zagolovokh-three{
-        font-weight: 500;
-font-size: 20px;
-line-height: 1.2;
-letter-spacing: 0.02em;
-color: #2e2f42;
-font-family: "Roboto", sans-serif;
-    }
+.paragraph {
+    font-size: 16px;
+    letter-spacing: 0.02em;
+    color: #434455;
+    line-height: 1.5;
+    font-weight: 500;
 }
 @media screen and (min-width: 768px) {
     .spisoktwo {
@@ -306,6 +300,7 @@ font-family: "Roboto", sans-serif;
         flex-wrap: wrap;
         gap: 24px;
         row-gap: 72px;
+
     }
 
     .paragraph {
@@ -314,21 +309,34 @@ font-family: "Roboto", sans-serif;
 
     .spisokkontent {
         flex-basis: calc((100% - 24px) / 2);
+        margin: 0;
     }
 
     .zagolovokh-three {
         text-align: left;
+        margin: 0;
     }
 }
+@media screen and (min-width: 1158px) {
+    .paragraph {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #434455;
+        font-family: "Roboto", sans-serif;
+    }
 
-.paragraph {
-    font-size: 16px;
-    letter-spacing: 0.02em;
-    color: #434455;
-    line-height: 1.5;
-    font-weight: 500;
+    .zagolovokh-three {
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+        font-family: "Roboto", sans-serif;
+        margin: 0;
+    }
 }
-
 /* THREE SECTION */
 .social-link {
     display: flex;
@@ -354,6 +362,20 @@ font-family: "Roboto", sans-serif;
     padding: 96px 0;
     background-color: #f4f4fd;
 }
+@media screen and (min-width: 1158px){
+    .section-three{
+        padding: 120px 0;
+    }
+    .section-two{
+        padding: 120px 0;
+    }
+    .section-one{
+        padding: 120px 0;
+    }
+    .section-four{
+        padding: 120px 0;
+    }
+}
 
 .zagolovokh-two {
     font-size: 36px;
@@ -371,8 +393,11 @@ font-family: "Roboto", sans-serif;
     row-gap: 72px;
     flex-wrap: wrap;
     padding: 0;
+    justify-content: center;
 }
-
+.container-social-links {
+    margin-bottom: 72px;
+}
 @media screen and (min-width: 768px) {
     .spisok-three {
         display: flex;
@@ -394,10 +419,10 @@ font-family: "Roboto", sans-serif;
 }
 .container-link-paragraph-footer{
     margin-right: 100px;
+    
 }
 .container-social-links{
     margin-right: 30px;
-    margin-bottom: 72px;
 }
 .input-form{
     opacity: 1;
@@ -508,7 +533,16 @@ font-family: "Roboto", sans-serif;
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
 }
-
+@media screen and (min-width: 768px) {
+    .spisok-kontent-fourth-section{
+        width: calc((100% - 24px) / 2);
+    }
+}
+@media screen and (min-width: 1158px) {
+    .spisok-kontent-fourth-section{
+        width: calc((100% - 48px) / 3);
+    }
+}
 .spisok-kontent-fourth-section:hover p {
     transform: translateY(0%);
 }
@@ -579,12 +613,9 @@ font-family: "Roboto", sans-serif;
     letter-spacing: 0.02em;
     color: #ffffff;
     line-height: 1.5;
-    text-align: center;
+    text-align: left;
 }
 
-.footer-container {
-    margin-bottom: 72px;
-}
 
 .social-icons-list-two {
     display: flex;
@@ -596,6 +627,7 @@ font-family: "Roboto", sans-serif;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin-bottom: 72px;
 }
 
 .button-form {
@@ -610,11 +642,10 @@ font-family: "Roboto", sans-serif;
     background-color: #4d5ae5;
     border: none;
     border-radius: 4px;
-
     display: flex;
     font-family: 'Roboto', sans-serif;
     fill: #fff;
-
+    
 
     
 }
@@ -627,8 +658,15 @@ font-family: "Roboto", sans-serif;
     letter-spacing: 0.02em;
     text-align: center;
     color: #fff;
-}
 
+}
+.paragraph-label{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    flex-wrap: wrap;
+}
 @media screen and (min-width: 768px) {
     .container-link-paragraph-footer {
         flex-direction: column;
@@ -639,6 +677,7 @@ font-family: "Roboto", sans-serif;
         padding: 0;
         margin: 0;
         text-align: left;
+        margin-bottom: 16px;
     }
 
     .footer-paragraph {
@@ -673,6 +712,11 @@ font-family: "Roboto", sans-serif;
         row-gap: 72px;
         padding: 0 ;
     }
+    .paragraph-label{
+        display: flex;
+        flex-wrap: nowrap;
+        gap: 24px;
+}
 }
 
 .logo-footer {
@@ -695,7 +739,7 @@ font-family: "Roboto", sans-serif;
 }
 
 .input-form {
-    width: 264px;
+    width: 288px;
     height: 40px;
     border: 1px solid #ffffff;
     background-color: transparent;
@@ -756,7 +800,7 @@ font-family: "Roboto", sans-serif;
         letter-spacing: 0.04em;
         color: #2e2f42;
         position: relative;
-        padding-left: 24px;
+        padding: 24px 0 24px;
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
@@ -770,8 +814,8 @@ font-family: "Roboto", sans-serif;
         width: 100%;
         height: 4px;
         position: absolute;
-        left: 12px;
-        top: 32px;
+        left: 0;
+        top: 62px;
         bottom: -1px;
         border-radius: 2px;
     }
@@ -878,7 +922,14 @@ font-family: "Roboto", sans-serif;
     top: 24px;
     right: 24px;
     border-radius: 100%;
-    border-color: #ffffff;
+    width: 24px;
+    height: 24px;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(231, 233, 252);
+    border-color: rgb(231, 233, 252);
 }
 .link-mobile{
 font-weight: 700;
@@ -899,6 +950,9 @@ color: #4d5ae5;
 }
 .li-mobile{
     margin-bottom: 40px;
+}
+.li-mobile:last-child{
+    margin: 0;
 }
 
 .mobile-menu {
@@ -972,7 +1026,7 @@ color: #4d5ae5;
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    padding: 72px 24px 24px 24px;
+    padding: 72px 16px 24px 16px;
 }
 @media screen and (min-width: 1158px){
     .modal-window{
@@ -1023,7 +1077,6 @@ color: #4d5ae5;
 }
 .one{
     border-radius: 100%;
-    opacity: 0.1;
 }
 
 .paragraph-modal-window {
